--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-hello world 
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="rQCFAu-Ftj7_GW7XERFnLrYzrkV9zbif0tXAsHoEM4c" />
+
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/ico/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/ico/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/ico/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/ico/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="img/ico/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="img/ico/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="img/ico/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/ico/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="img/ico/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="img/ico/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="img/ico/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/ico/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="img/ico/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="Blackrock Digital" />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="img/ico/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="img/ico/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="img/ico/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="img/ico/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="img/ico/mstile-310x310.png" />
+
+    <title>Blackrock Digital</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <img src="img/logo.svg" alt="Blackrock Digital Logo" class="img-responsive" style="margin: 30px 0;">
+                <p>Welcome to G33kzD3 , a Software Development Company.
+                A place where G33kz Meet.
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-38417733-27', 'auto');
+    ga('send', 'pageview');
+    </script>
+
+</body>
+
+</html>
