--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,7 +29,7 @@
     <meta name="msapplication-wide310x150logo" content="img/ico/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="img/ico/mstile-310x310.png" />
 
-    <title>Blackrock Digital</title>
+    <title>G33kzD3n</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
