--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <img src="logo.jpg" alt="G33kzD3n" class="img-responsive" style="margin: 30px 0;">
+                <img src="ghostslogo.jpg" alt="G33kzD3n" class="img-responsive" style="margin: 30px 0;">
                 <article><p>Welcome to G33kzD3 , a Software Development Company.
                 A place where G33kz Meet.</p></article>
             </div>
