--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <img src="ghostslogo.jpg" alt="G33kzD3n" class="img-responsive" style="margin: 30px 0;">
-                <article><p>Welcome to G33kzD3 , a Software Development Company.
-                A place where G33kz Meet.</p></article>
+                <article><h4><p class="lead text-muted">Welcome to 
+                <span class="glyphicon glyphicon-link" aria-hidden="true"> </span>
+       			<a href="https://github.com/G33kzD3n/G33kzD3n.github.io">G33kzD3n</a>, a Software Company.</h4></p>
+       			<h5>
+       			<p class="text-muted">
+                A place where G33kz Meet.</h5></p>
+                <h5><p>
+                Srinagar, Indian Occupied Kashmir, 190001.</h5></p></article>
+			           
             </div>
         </div>
     </div>
