--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="ghostslogo.jpg" alt="G33kzD3n" class="img-responsive" style="margin: 30px 0;">
                 <article><h4><p class="lead text-muted">Welcome to 
                 <span class="glyphicon glyphicon-link" aria-hidden="true"> </span>
-       			<a href="https://github.com/G33kzD3n/G33kzD3n.github.io">G33kzD3n</a>, a Software Company.</h4></p>
+       			<a href="https://github.com/G33kzD3n">G33kzD3n</a>, a Software Company.</h4></p>
        			<h5>
        			<p class="text-muted">
                 A place where G33kz Meet.</h5></p>
