--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        			<p class="text-muted">
                 A place where G33kz Meet.</h5></p>
                 <h5><p>
-                Srinagar, Indian Occupied Kashmir, 190001.</h5></p></article>
+               <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Srinagar, Indian Occupied Kashmir, 190001.</h5></p></article>
 			           
             </div>
         </div>
