--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
        			<a href="https://github.com/G33kzD3n">G33kzD3n</a>, a Software Company.</h4></p>
        			<h5>
        			<p class="text-muted">
-                A place where G33kz Meet.</h5></p>
+                A place where G33kz Meet.</h5></p><br>
+                <h5><p>In the meantime, please email us at 
+                 <span class="glyphicon glyphicon-envelope" aria-hidden="true"> 
+                 </span> <a href="#"> G33kzD3n@gmail.com</a> if you have any questions.
+                 </h5></p>
                 <h5><p>
                <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Srinagar, Indian Occupied Kashmir, 190001.</h5></p></article>
 			           
