--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span class="glyphicon glyphicon-link" aria-hidden="true"> </span>
        			<a href="https://github.com/G33kzD3n">G33kzD3n</a>, a Software Company.</h4></p>
        			<h5>
-       			<p class="text-muted">
+       			<p class="text-muted"> <span class="glyphicon glyphicon-blackboard" aria-hidden="true"> </span>
                 A place where G33kz Meet.</h5></p><br>
                 <h5><p>In the meantime, please email us at 
                  <span class="glyphicon glyphicon-envelope" aria-hidden="true"> 
