--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
        			<h5>
        			<p class="text-muted"> <span class="glyphicon glyphicon-blackboard" aria-hidden="true"> </span>
                 A place where G33kz Meet.</h5></p><br>
+		<ul>
+			<li>1) Read the /topic, the FAQ, and google before asking us.</li>
+			<li>2) Don't ask to ask, just ask. </li>
+			<li>3) Don't repeat; show that you have tried to help yourself by refining the question.</li>
+			<li>4) Reading documentation (man/info pages, READMEs) is a worthwhile skill, practice it.</li>
+			<li>5) Use /msg to talk to the bots (not the people), see <msg>.</li>
+			<li>6) Be polite and patient.</li>
+			<li>7) Paste into a "pastebin", not here.</li>
+			<li>8) No trolls or spam.</li>
+			<li>9) see *code of conduct* </li>
+		</ul>
                 <h5><p>In the meantime, please email us at 
                  <span class="glyphicon glyphicon-envelope" aria-hidden="true"> 
                  </span> <a href="mailto:G33kzD3n@gmail.com"> G33kzD3n@gmail.com</a> if you have any questions.
